Formatting fitted parameters

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "numeral": "^2.0.6",
     "papaparse": "^5.2.0",
     "vue": "^2.6.11"
   }
